--- a/StudentEnrollment/StudentEnrollment/Views/Course/Enrolled.cshtml
+++ b/StudentEnrollment/StudentEnrollment/Views/Course/Enrolled.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StudentEnrollment.Models.Student
 @{
 }
-<h2>Student Details</h2>
+<h2>Enrolled Students</h2>
 
 <h4>Student</h4>
 <dl>
@@ -11,4 +11,4 @@
 </dl>
 
 <a asp-action="Edit" asp-route-id="@Model.ID">Edit Student</a>
-<a asp-action="Index">Back to Student Home</a> 
+<a asp-action="Index">Back to Course Home</a>
