--- a/StudentEnrollment/StudentEnrollment/Views/Shared/_Layout.cshtml
+++ b/StudentEnrollment/StudentEnrollment/Views/Shared/_Layout.cshtml
@@ -50,7 +50,17 @@
         </div>
     </nav>
 
-    <!-- Main Content -->
+    <header class="masthead" style="background-image: url('/images/home-bg.jpg')">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <div class="container">
         @RenderBody()
     </div>
