fixed issues preventing deployment from working

--- a/StudentEnrollment/StudentEnrollment/Views/Home/Index.cshtml
+++ b/StudentEnrollment/StudentEnrollment/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home";
 }
-<h1>CodeFellows School Management</h1>
+<h1>CodeFellows Course Management Sysytem</h1>
+
+<h3>To update or add a course <a asp-controller="Course" asp-action="Index">Click Here</a></h3>
+<h3>To update or add a student <a asp-controller="Student" asp-action="Index">Click Here</a></h3>
